Fixed different tab heights on mobile.

--- a/src/views/page/CreateWord/components/Tabs.scss
+++ b/src/views/page/CreateWord/components/Tabs.scss
@@ -143,7 +143,6 @@
 
           .swiper-wrapper {
             .swiper-slide {
-              overflow-y: scroll;
               -ms-overflow-style: none;
               scrollbar-width: none;
 
